--- a/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
+++ b/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
@@ -3,9 +3,10 @@
   [requiredButton]="[]"
 ></ngx-componentsheader>
 <div class="main-page-container">
+  <!-- {{ allBanks | json }} -->
   <nb-tabset (changeTab)="selectTab($event)">
     <nb-tab tabTitle="Single Disbursement" [tabId]="TABS.SINGLE">
-      <!-- Tab content 1 -->
+      <form #disburseForm="ngForm" name="disburseForm" id="disburseForm">
         <div class="form-group row">
           <div class="col-sm-2 col-md-2 col-lg-2">
             <label>Channel</label>
@@ -15,7 +16,8 @@
             class="form-control"
             placeholder="Select Channel" name="channel" #channel="ngModel" [(ngModel)]="disbursement.channelId"
           >
-          <option value="1" *ngFor="let channel of allChannels">Option 1</option>
+          <option value=""  disabled>Select Channel</option>
+          <option value="1" *ngFor="let mychannel of allChannels">{{mychannel.name}}</option>
         </select>
           </div>
         </div>
@@ -25,33 +27,36 @@
                 <label>Disburse for</label>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-6">
-                <nb-radio-group name="disburse_for" (ngModelChange)="changeDisburse($event)">
-                  <nb-radio value="1">Budget Item</nb-radio>
-                  <nb-radio value="2">Project</nb-radio>
+                <nb-radio-group name="disburse_for" #disburse_for="ngModel" [(ngModel)]="disbursement" (ngModelChange)="changeDisburse($event)">
+                  <nb-radio [value]=true >Budget Item</nb-radio>
+                  <nb-radio [value]=false>Project</nb-radio>
                 </nb-radio-group>
               </div>
             </div>
 
-            <div *ngIf="budgetItem" class="form-group row" style="margin-top: 20px">
+            <div *ngIf="budgetItem == true" class="form-group row" style="margin-top: 20px">
               <div class="col-sm-2 col-md-2 col-lg-2">
                 <label>Budget Item</label>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-6">
-                <select class="form-control" name="bugetItem" #budgetItem="ngModel" [(ngModel)]="disbursement.disbursementBudgetItemId" placeholder="Select"></select>
-                <option *ngFor="let item of allBudgetItems" value=item.code>{{item.name}}</option>
+                <select class="form-control" name="bugetItem" #budgetItem="ngModel" [(ngModel)]="disbursement.disbursementBudgetItemId" placeholder="Select">
+                <option value="">--Select Budget Item--</option>
+                <option *ngFor="let item of allBudgetItems" value="item.code">{{ item.name }}</option>
+              </select>
               </div>
               <div *ngIf="budgetItem.invalid && (budgetItem.dirty || budgetItem.touched)" class="error">
                 <div *ngIf="budgetItem.errors.required">Budget Item is required</div>
               </div>
             </div>
 
-            <div *ngIf="!budgetItem" class="form-group row" style="margin-top: 20px">
+            <div *ngIf="budgetItem == false" class="form-group row" style="margin-top: 20px">
               <div class="col-sm-2 col-md-2 col-lg-2">
                 <label>Project</label>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-6">
-                <select class="form-control" name="projectItem" #projectItem="ngModel" [(ngModel)]="disbursement.projectId" placeholder="Select"></select>
-                <option value="1">Select Project Item</option>
+                <select class="form-control" name="projectItem" #projectItem="ngModel" [(ngModel)]="disbursement.projectId" placeholder="Select">
+                  <option value="1">Select Project Item</option>
+                </select>
               </div>
               <div *ngIf="projectItem.invalid && (projectItem.dirty || projectItem.touched)" class="error">
                 <div *ngIf="projectItem.errors.required">Project Item is required</div>
@@ -64,46 +69,28 @@
                 <label>Recipient</label>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-6">
-                <nb-radio-group name="recipient" (ngModelChange)="changeRecipient($event)">
-                  <nb-radio value="1">New account</nb-radio>
-                  <nb-radio value="2">Existing Beneficiary</nb-radio>
-                  <nb-radio value="3">Employee</nb-radio>
+                <nb-radio-group name="recipient" [(ngModel)]="disbursement" #recipient="ngModel" (ngModelChange)="changeRecipient($event)">
+                  <nb-radio [value]='1'>New account</nb-radio>
+                  <nb-radio [value]='2'>Existing Beneficiary</nb-radio>
+                  <nb-radio [value]='3'>Employee</nb-radio>
                 </nb-radio-group>
               </div>
             </div>
 
-            <div *ngIf="recipient == 2" class="form-group row" style="margin-top: 20px">
-              <div class="col-sm-2 col-md-2 col-lg-2">
-                <label>Beneficiary</label>
-              </div>
-              <div class="col-sm-6 col-md-6 col-lg-6">
-                <select class="form-control" name="beneficiary" #beneficiary="ngModel" [(ngModel)]="disbursement.beneficiary_id" placeholder="Select Bank"></select>
-              </div>
-              <div *ngIf="beneficiary.invalid && (beneficiary.dirty || beneficiary.touched)" class="error">
-                <div *ngIf="beneficiary.errors.required">Project Item is required</div>
-              </div>
-            </div>
 
-            <div *ngIf="recipient ==3" class="form-group row" style="margin-top: 20px">
-              <div class="col-sm-2 col-md-2 col-lg-2">
-                <label>Select Employee</label>
-              </div>
-              <div class="col-sm-6 col-md-6 col-lg-6">
-                <ngx-employee-master-search></ngx-employee-master-search>
-              </div>
-            </div>
-
-            <div *ngIf="recipient ==1">
+            <div *ngIf="myrecipient == '1'">
               <div class="form-group row" style="margin-top: 20px">
                 <div class="col-sm-2 col-md-2 col-lg-2">
-                  <label>Bank Name</label>
+                  <label>Bank Name </label>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6">
-                  <select class="form-control" name="bankName" #bankName="ngModel" [(ngModel)]="disbursement.bankId" placeholder="Select Bank">
-                    <option value=""></option>
+                  <select class="form-control" name="bankName" #bankName="ngModel" [(ngModel)]="disbursement">
+                    <option  value="">-- Select Bank --</option>
+                    <option *ngFor="let bank of allbanksName; let i = index" value="bank.option_value">{{bank.option_text}}</option>
                   </select>
                 </div>
               </div>
+
 
               <div class="form-group row" style="margin-top: 20px">
                 <div class="col-sm-2 col-md-2 col-lg-2">
@@ -119,10 +106,31 @@
                   <label>Account Name</label>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6">
-                  <input type="text" class="form-control" name="accountName" #accountName="ngModel" [(ngModel)]="disbursement.accountName" placeholder="Select Bank">
+                  <input type="text" class="form-control" name="accountName" #accountName="ngModel" [(ngModel)]="disbursement.accountName" placeholder="Enter Account Name">
                 </div>
               </div>
 
+            </div>
+
+            <div *ngIf="myrecipient == '2'" class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Beneficiary</label>
+              </div>
+              <div class="col-sm-6 col-md-6 col-lg-6">
+                <select class="form-control" name="beneficiary" #beneficiary="ngModel" [(ngModel)]="disbursement.beneficiary_id" placeholder="Select Bank"></select>
+              </div>
+              <div *ngIf="beneficiary.invalid && (beneficiary.dirty || beneficiary.touched)" class="error">
+                <div *ngIf="beneficiary.errors.required">Project Item is required</div>
+              </div>
+            </div>
+
+            <div *ngIf="myrecipient =='3'" class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Select Employee</label>
+              </div>
+              <div class="col-sm-6 col-md-6 col-lg-6">
+                <ngx-employee-master-search></ngx-employee-master-search>
+              </div>
             </div>
 
             <div class="form-group row" style="margin-top: 20px">
@@ -139,26 +147,30 @@
                 <label>Scheduled Date</label>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-6">
-                <ngx-date [(ngModel)]="disbursement.scheduledDate"></ngx-date>
+                <ngx-date [(value)]="disbursement.scheduledDate"></ngx-date>
               </div>
             </div>
 
             <div class="form-group row" style="margin-top: 20px">
               <div class="col-sm-2 col-md-2 col-lg-2">
-                <label>Description/purpose</label>
+                <label>Description/purpose  </label>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-6">
-                <ngx-wysisyg-input style="padding-left: -10px;" [(ngModel)]="disbursement.description"></ngx-wysisyg-input>
+                <ngx-wysisyg-input style="padding-left: -10px;" ></ngx-wysisyg-input>
               </div>
 
             </div>
 
             <div class="form-group row">
               <div class="col-sm-2 col-md-2 col-lg-2"></div>
+              <!-- <div class="col-sm-6 col-md-6 col-lg-6" >
+                <nb-checkbox *ngIf="recipient ==1" status="basic" name="benefiary" #benefiary="ngModel" [(ngModel)]="disbursement.save_as_beneficiary">Save as Beneficiary</nb-checkbox>&nbsp;&nbsp;
+                <nb-checkbox status="basic" [(ngModel)]="disbursement.isRecurring" name="recurring" #recurring="ngModel" (checkedChange)="toggle($event)">Recurring</nb-checkbox>
+              </div> -->
               <div class="col-sm-6 col-md-6 col-lg-6" >
-                <nb-checkbox *ngIf="recipient ==1" status="basic" [(ngModel)]="disbursement.save_as_beneficiary">Save as Beneficiary</nb-checkbox>&nbsp;&nbsp;
-                <nb-checkbox status="basic" (checkedChange)="toggle($event)">Recurring</nb-checkbox>
-              </div>
+                  <nb-checkbox status="basic" [(ngModel)]="disbursement.saveAsBeneficiary" name="saveBenefiary" #saveBenefiary="ngModel">Save as Beneficiary</nb-checkbox>&nbsp;&nbsp;
+                  <nb-checkbox status="basic" [(ngModel)]="disbursement.isRecurring"  name="setRecurring" #setRecurring="ngModel" (checkedChange)="toggle($event)">Recurring</nb-checkbox>
+                </div>
             </div>
 
             <div *ngIf="recurrence == true">
@@ -167,7 +179,10 @@
                   <label>Frequency</label>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6">
-                  <select class="form-control" name="frequency" #frequency="ngModel" [(ngModel)]="disbursement.frequencyId" placeholder="Frequency"></select>
+                  <select class="form-control" name="frequency" #frequency="ngModel" [(ngModel)]="disbursement.frequencyId" placeholder="Frequency">
+                    <option value="" default>--Select Frequency--</option>
+                    <option *ngFor="let frequent of allFrequcbies" value="frequent.id">{{frequent.name}}</option>
+                  </select>
                 </div>
 
               </div>
@@ -194,12 +209,15 @@
               <label></label>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <button nbButton status="primary">Submit</button>
+              <button nbButton status="primary" (click)="createDisbursement()" [disabled]="disburseForm.form.invalid">Submit</button>
             </div>
           </div>
+        </form>
     </nb-tab>
+
+    <!-- Bulk Disbursement -->
+
     <nb-tab tabTitle="Bulk Disbursement" [tabId]="TABS.BULK">
-      <!-- Tab content 2 -->
       <div class="my-form">
         <div class="form-group row">
           <div class="col-sm-2 col-md-2 col-lg-2">
@@ -235,10 +253,10 @@
 
             <div class="form-group row" style="margin-top: 20px">
               <div class="col-sm-2 col-md-2 col-lg-2">
-                <label>Description/purpose</label>
+                <label>Comments</label>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-6">
-                <ngx-wysisyg-input style="padding-left: -10px;" [(ngModel)]="disbursement.description"></ngx-wysisyg-input>
+                <ngx-wysisyg-input style="padding-left: -10px;"></ngx-wysisyg-input>
               </div>
             </div>
 
@@ -274,7 +292,7 @@
                     <label>End Date</label>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-6">
-                    <ngx-date  [min]="disbursement.startDate" [value]="disbursement.endDate"></ngx-date>
+                    <ngx-date [min]="disbursement.startDate" [value]="disbursement.endDate"></ngx-date>
                   </div>
                 </div>
               </div>
@@ -284,7 +302,7 @@
                 <label></label>
               </div>
               <div class="col-sm-6 col-md-6 col-lg-6">
-                <button nbButton status="primary">Submit</button>
+                <button nbButton status="primary" (click)="createDisbursement()">Submit</button>
               </div>
             </div>
           </div>
