--- a/src/app/modules/disbursement/budget/update-item/update-item.component.html
+++ b/src/app/modules/disbursement/budget/update-item/update-item.component.html
@@ -1,1 +1,60 @@
-<p>update-item works!</p>
+<div>
+  <div>
+      <div class="row">
+        <div class="form-group col">
+          <label>Budget Item</label>
+          <input class="form-control" name="itemName" #itemName="ngModel" [(ngModel)]="budgetItem.budget_item" [(value)]="budgetItem.budget_item" required>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <div class="col">
+          <label>Budget Code</label>
+          <input class="form-control" name="itemCode" #itemCode="ngModel" [(ngModel)]="budgetItem.budget_code" placeholder="Budget Code" required>
+        </div>
+      </div>
+      <div class="form-group row">
+        <div class="col">
+          <label>Total Budget Amount</label>
+          <app-amount-input [(value)]="budgetItem.amount"></app-amount-input>
+          <!-- <input class="form-control" name="itemAmount" #itemAmount="ngModel" [(ngModel)]="budgetItem.amount" placeholder="Total Budget Amount" required> -->
+        </div>
+      </div>
+    </div>
+
+      <hr/>
+      <div class="form-group row">
+      <div class="col">
+        <label>Department</label>
+        <select class="form-control" name="department" #department="ngModel" [(ngModel)]="departments.department_id" required>
+          <option value="1">Select Department</option>
+          <option *ngFor="let dep of allDepartments[0]" value=dep.code>{{dep.name}}</option>
+        </select>
+      </div>
+      </div>
+      <div class="form-group row">
+        <div class="col">
+          <label>Allocated amount</label>
+          <app-amount-input [(value)]="departments.amount"></app-amount-input>
+        <!-- <input class="form-control"  name="allocatedAmount" #allocatedAmount="ngModel" [(ngModel)]="departments.amount"> -->
+        </div>
+      </div>
+
+      <div class="form-group" style="margin-top: 20px">
+        <label></label>
+        <div>
+            <button nbButton status="primary" class="border-none" (click)="addDepartment()" outline>
+              <nb-icon icon="plus-outline"></nb-icon>
+              Add department
+            </button>
+        </div>
+      </div>
+
+      <div class="form-group" style="margin-top: 20px">
+        <label></label>
+        <div>
+            <button nbButton status="primary" outline class="white-background mr-2">Cancel</button>
+            <button nbButton status="primary" (click)="updateBudgetItem($event)">Update</button>
+        </div>
+      </div>
+  </div>
