--- a/src/app/modules/employeemodule/employeerecords/employeerecords.component.html
+++ b/src/app/modules/employeemodule/employeerecords/employeerecords.component.html
@@ -4,10 +4,29 @@
 
 <nb-card >
     <nb-card-body>
-        <ngx-tableheader></ngx-tableheader>
+        <ngx-default-content
+        *ngIf="showEmpty"
+        pageHeader="Create your first Employee"
+        pageDescription="Click on the button to create Employee"
+        buttonValue="Create Employee"
+        [loading]="loading"
+        (buttonClick)="modal('add_leave_year')"
+      >
+      </ngx-default-content>
+        <ngx-tablecomponent  
+        *ngIf="!showEmpty"
+        (filterChange)="filterUpdated($event)"
+        [showActions]="true"
+        [showFilter]="true"
+        (actionClick)="tableActionClicked($event)"
+        [actions]="tableActions" 
+        [userData]="allMyEmployees" 
+        [tableColum]="tableColumns"
+        [totalItems]="totalItems"
+        [currentPage]="currentPage"
+        [loading]="loading"
+        >
+    </ngx-tablecomponent>
 
-        <ngx-tablecomponent [tableColum]="tableColumns" [userData]="allMyEmployees">
-
-        </ngx-tablecomponent>
     </nb-card-body>
 </nb-card>
