--- a/src/app/modules/disbursement/disbursement/disbursementrequests/disbursementrequests.component.html
+++ b/src/app/modules/disbursement/disbursement/disbursementrequests/disbursementrequests.component.html
@@ -6,22 +6,22 @@
   <nb-tabset (changeTab)="selectTab($event)">
     <nb-tab tabTitle="All Requests" [tabId]="TABS.ALL_REQUESTS">
       <ngx-tableheader></ngx-tableheader>
-       <ngx-tablecomponent [tableColum]="AllRequest" [userData]="tableData"></ngx-tablecomponent>
+       <ngx-tablecomponent [tableColum]="AllRequest" [userData]="allRequesttableData"></ngx-tablecomponent>
     </nb-tab>
 
     <nb-tab tabTitle="Disbursed" [tabId]="TABS.DISBURSED">
       <ngx-tableheader></ngx-tableheader>
-      <ngx-tablecomponent [tableColum]="Disbursed" [userData]="tableData"></ngx-tablecomponent>
+      <ngx-tablecomponent [tableColum]="Disbursed" [userData]="disbursedTableData"></ngx-tablecomponent>
     </nb-tab>
 
 
     <nb-tab tabTitle="Pending" [tabId]="TABS.PENDING">
       <ngx-tableheader></ngx-tableheader>
-       <ngx-tablecomponent [tableColum]="Pending" [userData]="tableData"></ngx-tablecomponent>
+       <ngx-tablecomponent [tableColum]="Pending" [userData]="pendingTableData"></ngx-tablecomponent>
     </nb-tab>
     <nb-tab tabTitle="Failed" [tabId]="TABS.FAILED">
       <ngx-tableheader></ngx-tableheader>
-      <ngx-tablecomponent [tableColum]="Failed" [userData]="tableData"></ngx-tablecomponent>
+      <ngx-tablecomponent [tableColum]="Failed" [userData]="failedTableData"></ngx-tablecomponent>
     </nb-tab>
   </nb-tabset>
 
