--- a/src/app/modules/disbursement/budget/update-item/update-item.component.html
+++ b/src/app/modules/disbursement/budget/update-item/update-item.component.html
@@ -23,6 +23,7 @@
     </div>
 
       <hr/>
+      <h6>Breakdown by department</h6>
       <div class="form-group row">
       <div class="col">
         <label>Department</label>
