--- a/src/app/modules/disbursement/disbursement/disbursement-history/disbursement-history.component.html
+++ b/src/app/modules/disbursement/disbursement/disbursement-history/disbursement-history.component.html
@@ -1,5 +1,5 @@
 <ngx-componentsheader
-  pageName="Disbursement Requests"
+  pageName="Disbursement History"
   [requiredButton]="[]"
 ></ngx-componentsheader>
 <div class="main-page-container">
