--- a/src/app/modules/disbursement/budget/update-item/update-item.component.html
+++ b/src/app/modules/disbursement/budget/update-item/update-item.component.html
@@ -3,21 +3,21 @@
       <div class="row">
         <div class="form-group col">
           <label>Budget Item</label>
-          <input class="form-control" name="itemName" #itemName="ngModel" [(ngModel)]="budgetItem.budget_item" [(value)]="budgetItem.budget_item" required>
+          <input class="form-control" name="itemName" #itemName="ngModel" [(value)]="myBudgetItem.name" required>
         </div>
       </div>
 
       <div class="form-group row">
         <div class="col">
           <label>Budget Code</label>
-          <input class="form-control" name="itemCode" #itemCode="ngModel" [(ngModel)]="budgetItem.budget_code" placeholder="Budget Code" required>
+          <input class="form-control" name="itemCode" #itemCode="ngModel" [(value)]="myBudgetItem.code" placeholder="Budget Code" required>
         </div>
       </div>
       <div class="form-group row">
         <div class="col">
           <label>Total Budget Amount</label>
-          <app-amount-input [(value)]="budgetItem.amount"></app-amount-input>
-          <!-- <input class="form-control" name="itemAmount" #itemAmount="ngModel" [(ngModel)]="budgetItem.amount" placeholder="Total Budget Amount" required> -->
+          <app-amount-input [(value)]="myBudgetItem.totalBudget"></app-amount-input>
+          <!-- <input class="form-control" name="itemAmount" #itemAmount="ngModel" [(ngModel)]="myBudgetItem.amount" placeholder="Total Budget Amount" required> -->
         </div>
       </div>
     </div>
@@ -35,9 +35,8 @@
       </div>
       <div class="form-group row">
         <div class="col">
-          <label>Allocated amount</label>
+          <label>Amount</label>
           <app-amount-input [(value)]="departments.amount"></app-amount-input>
-        <!-- <input class="form-control"  name="allocatedAmount" #allocatedAmount="ngModel" [(ngModel)]="departments.amount"> -->
         </div>
       </div>
 
