--- a/src/app/modules/module-settings/pages/job-role/job-role.component.html
+++ b/src/app/modules/module-settings/pages/job-role/job-role.component.html
@@ -11,4 +11,6 @@
   [tableColumns]="tableColumns"
   [loadingSave]="loadingSave"
   [formTitle]="formTitle"
+  [emptyConfig]="emptyConfig"
+  [loading]="loading"
 ></ngx-page>
