--- a/src/app/modules/expense/expense-management/expense-management.component.html
+++ b/src/app/modules/expense/expense-management/expense-management.component.html
@@ -46,6 +46,16 @@
         </div>
 
         <div class="form-group row">
+          <label class="col-sm-3" for="Name" class="col-sm-3">Reference Id</label>
+          <div class="col-sm-6 col-md-6 col-lg-6">
+            <input type="text" class="form-control" placeholder="Name" name="referenceId" #referenceId="ngModel" [(ngModel)]="allProjects.referenceId">
+          </div>
+          <div *ngIf="name.invalid && (referenceId.dirty || referenceId.touched)" class="error">
+            <div *ngIf="referenceId.errors.required">Reference Id is required</div>
+          </div>
+        </div>
+
+        <div class="form-group row">
           <label class="col-sm-3" for="Start Date">Start Date:</label>
           <div class="col-sm-6 col-md-6 col-lg-6">
             <ngx-date [max]="allProjects.endDate" [(value)]="allProjects.startDate"></ngx-date>
@@ -130,6 +140,16 @@
         </div>
         <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
           <div *ngIf="name.errors.required">Name is required</div>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-sm-3" for="Name" class="col-sm-3">Reference Id</label>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+          <input type="text" class="form-control" placeholder="Name" name="referenceId" #referenceId="ngModel" [(ngModel)]="myexpenseType.referenceId">
+        </div>
+        <div *ngIf="name.invalid && (referenceId.dirty || referenceId.touched)" class="error">
+          <div *ngIf="referenceId.errors.required">Reference Id is required</div>
         </div>
       </div>
 
