--- a/src/app/modules/module-settings/pages/location-list/location-list.component.html
+++ b/src/app/modules/module-settings/pages/location-list/location-list.component.html
@@ -6,6 +6,7 @@
 <div class="main-page-container">
 <ngx-default-content
     *ngIf="showEmpty"
+    [loading]="loading"
     pageHeader="Create your first Location"
     pageDescription="Click on the button to create a Location"
     buttonValue="Create Location"
