--- a/src/app/modules/module-settings/pages/request/request.component.html
+++ b/src/app/modules/module-settings/pages/request/request.component.html
@@ -7,6 +7,7 @@ pageName="Request"
 <div class="main-page-container">
 <ngx-default-content
   *ngIf="showEmpty"
+  [loading]="loading"
   pageHeader="Create your first Request type"
   pageDescription="Click on the button to create a request ty[e"
   buttonValue="Create Request type"
