--- a/src/app/modules/performance/page/assign-kra/assign-kra.component.html
+++ b/src/app/modules/performance/page/assign-kra/assign-kra.component.html
@@ -2,19 +2,29 @@
 
 <div class="main-page-container">
     <div class="linear-form">
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label>Appraisal Cycle</label>
             <select class="form-control"></select>
         </div>
         <div class="form-group">
             <label>Key Result Area</label>
             <select class="form-control"></select>
-        </div>
+        </div> -->
         <div class="form-group">
             <label>Reviewer</label>
-            <select class="form-control"></select>
+            <ngx-employee-master-search></ngx-employee-master-search>
         </div>
         <div class="form-group">
+            <label>Employee</label>
+            <ngx-employee-master-search></ngx-employee-master-search>
+        </div>
+        <div class="form-group">
+            <label></label>
+            <div>
+                <button nbButton status='primary' (click)="assignKra()">Assign</button>
+            </div>
+        </div>
+        <!-- <div class="form-group">
             <label></label>
             <div>
                 <button nbButton status='primary' outline style="border: none;">
@@ -34,6 +44,6 @@
                     Assign KRA
                 </button>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
