--- a/src/app/modules/performance/pages/performance-management-cycle/performance-management-cycle.component.html
+++ b/src/app/modules/performance/pages/performance-management-cycle/performance-management-cycle.component.html
@@ -28,7 +28,8 @@
       <div class="linear-form">
         <div class="form-group">
           <label>Review Purpose</label>
-          <select class="form-control" [(ngModel)]="editingData.reviewPurposeId"></select>
+          <!-- <select class="form-control" [(ngModel)]="editingData.reviewPurposeId"></select> -->
+          <ngx-multi-select [(idValue)]="editingData.reviewPurposeId" [singleSelection]="true" [items]="reviewTypes"></ngx-multi-select>
         </div>
 
         <div class="form-group">
@@ -83,17 +84,17 @@
 
         <div class="form-group">
           <label>Department</label>
-          <ngx-multi-select [(value)]="editingData.departmentId" [singleSelection]="true" [choice_name]="ChoiceName.departments"></ngx-multi-select>
+          <ngx-multi-select [(idValue)]="editingData.departmentId" [singleSelection]="true" [choice_name]="ChoiceName.departments"></ngx-multi-select>
         </div>
 
         <div class="form-group">
           <label>Unit/Division</label>
-          <ngx-multi-select [(value)]="editingData.unitId" [singleSelection]="true" [choice_name]="ChoiceName.departments"></ngx-multi-select>
+          <ngx-multi-select [(idValue)]="editingData.unitId" [singleSelection]="true" [choice_name]="ChoiceName.departments"></ngx-multi-select>
         </div>
 
         <div class="form-group">
           <label>Location</label>
-          <ngx-multi-select [(value)]="editingData.locationId" [singleSelection]="true" [choice_name]="ChoiceName.locations"></ngx-multi-select>
+          <ngx-multi-select [(idValue)]="editingData.locationId" [singleSelection]="true" [choice_name]="ChoiceName.locations"></ngx-multi-select>
         </div>
 
         <div class="form-group">
@@ -107,7 +108,7 @@
       </div>
     </div>
     <div modal-actions>
-      <button nbButton status="primary">Save</button>
+      <button nbButton status="primary" (click)="submitForm()">Save</button>
       <button nbButton status="primary" outline style="background: transparent">
         Cancel
       </button>
