--- a/src/app/modules/employeemodule/employeerecordsview/employeerecordsview.component.html
+++ b/src/app/modules/employeemodule/employeerecordsview/employeerecordsview.component.html
@@ -37,7 +37,7 @@
                 <p class="header6-medium" style="flex: auto;">{{selectedPanel.label}}</p>
                 <div style="display: flex;flex-direction: row;">
                  <div >
-                  <img src="assets/icons/camera.jpg" style="border-radius: 50%; height: 7em;width: 7rem;">
+                  <img src="assets/icons/camera.jpg" onError="this.src='assets/icons/camera.jpg'" style="border-radius: 50%; height: 7em;width: 7rem;">
                  </div>
                  <div style="display: flex;flex-direction: column;justify-content: center;padding-left: 15px;"
                  flow-init     
@@ -861,7 +861,7 @@
               </div>
               <div class="col-sm-6 form-group">
                 <label>Account Numer</label>
-                <input type="text"  class="form-control" #account_no="ngModel" [(ngModel)]="indVEmpBanks.account_no" id="account_no" name="account_no">
+                <input type="text" (keyup)="inputNumberValidation($event)"  class="form-control" #account_no="ngModel" [(ngModel)]="indVEmpBanks.account_no" id="account_no" name="account_no">
                
               </div>
               <div class="col-sm-6 form-group">
@@ -874,7 +874,7 @@
               </div>
               <div class="col-sm-6 form-group">
                 <label>Sort Code</label>
-                <input type="text"  class="form-control" #account_typeId="ngModel" [(ngModel)]="indVEmpBanks.account_typeId" id="account_typeId" name="account_typeId">
+                <input type="text"  class="form-control" #bank_sort_code="ngModel" [(ngModel)]="indVEmpBanks.bank_sort_code" id="bank_sort_code" name="bank_sort_code">
               </div>
               <div class="col-sm-12 form-group">
                 <nb-checkbox #is_primary="ngModel" [(ngModel)]="indVEmpBanks.is_primary" id="is_primary" name="is_primary">
@@ -887,14 +887,22 @@
           
           </form>
           <div style="padding-top: 5px;">
-            <div class="cbadge" *ngFor="let tempbank of tempEmpBanksList">{{tempbank.account_no}}</div>
+            <div class="row">
+<div class="col-sm-6"  *ngFor="let tempbank of tempEmpBanksList;let i = index">
+  <div class="cbadge">{{getbankname(tempbank.id_bank)}}&nbsp;|&nbsp;{{tempbank.numb_account}}&nbsp;<i class="fa fa-times" (click)="removefromBank(i)" style="color:#EB5757;cursor: pointer;"></i></div>
+</div>
+            </div>
+           
           </div>
         </div>
-        <div modal-actions class="d-flex" style="margin-top: 20px; margin-bottom: 30px;">
-          <button *ngIf="btnContractSubmitted"  nbButton status="primary" class="d-flex column" ><i class="fa fa-spin fa-spinner"></i>&nbsp;Processing ...</button>
-          <button *ngIf="!btnContractSubmitted" (click)="submitbank(indVEmpBanks)"  nbButton status="primary" class="d-flex column" >Submit</button>
-          
-  
+        <div modal-actions style="margin-top: 10px; margin-bottom: 30px;display: flex;flex-direction: row;">
+          <ngx-loadable-button [loading]="EmpBankloading" [disabled]="tempEmpBanksList.length < 1" (click)="submit(indVEmpBanks)" >
+            Submit
+          </ngx-loadable-button>           
+          <div style="padding-left: 15px;">
+            <button [disabled]="!disableaddBank" outline="true" (click)="addtopbank(indVEmpBanks)"  nbButton status="primary" class="d-flex column" >  <nb-icon  icon="plus"></nb-icon>&nbsp;Add </button>
+         
+          </div>
       </div>
       <div style="margin-top: 10px;"></div>
       </ngx-side-modal>
